@startuml Attendance_Management_System_ERD
skinparam backgroundColor white
skinparam linetype ortho
skinparam class {
    BackgroundColor #F8F9FA
    ArrowColor #2C3E50
    BorderColor #2C3E50
    BorderThickness 2
}

package "Identity" {
    class users {
        PK user_id: INT UNSIGNED
        username: VARCHAR(50) UNIQUE
        email: VARCHAR(120)
        password_hash: VARCHAR(255)
        full_name: VARCHAR(120)
        role: ENUM(admin, teacher, student)
        is_active: TINYINT(1)
    }
    class teachers {
        PK teacher_id: INT UNSIGNED
        FK user_id -> users
        department: VARCHAR(80)
    }
    class students {
        PK student_id: INT UNSIGNED
        FK user_id -> users
        register_number: VARCHAR(40) UNIQUE
        FK class_id -> classes
        FK section_id -> sections
    }
}

package "Academic structure" {
    class classes {
        PK class_id: INT UNSIGNED
        name: VARCHAR(50) UNIQUE
    }
    class sections {
        PK section_id: INT UNSIGNED
        FK class_id -> classes
        name: VARCHAR(20)
        UNIQUE (class_id, name)
    }
    class subjects {
        PK subject_id: INT UNSIGNED
        code: VARCHAR(20) UNIQUE
        name: VARCHAR(100) UNIQUE
    }
    class teacher_subjects {
        PK id
        FK teacher_id -> teachers
        FK subject_id -> subjects
        UNIQUE (teacher_id, subject_id)
    }
    class timetable {
        PK timetable_id: INT UNSIGNED
        FK class_id / section_id / subject_id / teacher_id
        day_of_week: TINYINT (1-7)
        period: TINYINT (1-12)
        start_time / end_time: TIME
        UNIQUE (class_id, section_id, day_of_week, period)
    }
}

package "Attendance" {
    class attendance {
        PK attendance_id: INT UNSIGNED
        FK student_id -> students
        FK subject_id -> subjects
        FK teacher_id -> teachers
        FK class_id -> classes
        attendance_date: DATE
        period: TINYINT
        status: ENUM(present, absent, leave)
        FK marked_by -> users
        UNIQUE (student_id, subject_id, attendance_date, period)
    }
    class attendance_edits {
        PK edit_id
        FK attendance_id -> attendance
        old_status / new_status: ENUM
        FK changed_by -> users
        reason: VARCHAR(255)
    }
    class attendance_sessions {
        PK session_id
        token_hash: CHAR(64) UNIQUE
        FK teacher_id / subject_id / class_id / section_id
        attendance_date: DATE
        period: TINYINT
        expires_at: DATETIME
        is_active: TINYINT(1)
    }
}

package "Workflow" {
    class leave_requests {
        PK leave_id: INT UNSIGNED
        FK student_id -> students
        FK teacher_id -> teachers
        FK subject_id -> subjects
        start_date / end_date: DATE
        reason: TEXT
        status: ENUM(pending, approved, rejected)
        FK approved_by -> teachers
    }
    class notifications {
        PK notification_id
        FK user_id -> users
        title: VARCHAR(150)
        message: TEXT
        type: ENUM
        is_read: TINYINT(1)
    }
    class audit_logs {
        PK audit_id
        FK user_id -> users
        action: VARCHAR(64)
        entity_type / entity_id
        description: TEXT
        ip_address: VARCHAR(45)
    }
}

users ||--o| teachers : "1:1"
users ||--o| students : "1:1"
classes ||--o{ sections : has
students }o--|| classes : belongs
students }o--|| sections : placed
teachers ||--o{ teacher_subjects : assigned
subjects ||--o{ teacher_subjects : taught
teachers ||--o{ timetable : teaches
sections ||--o{ timetable : scheduled
students ||--o{ attendance : has
subjects ||--o{ attendance : in
attendance ||--o{ attendance_edits : history
teachers ||--o{ attendance_sessions : starts
students ||--o{ leave_requests : requests
teachers ||--o{ leave_requests : reviews
users ||--o{ notifications : receives
users ||--o{ audit_logs : acts
@enduml
